--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -19,8 +19,8 @@
           <div class="d-flex align-items-center">
             <input
               id="create-field"
-              name="item"
-              aotofocus
+              name="reja"
+              autofocus
               autocomplete="off"
               class="form-control mr-3"
               type="text"
@@ -32,6 +32,13 @@
           </div>
         </form>
       </div>
+
+
+            <%=  items[0].reja %>
+
+          
+
+            
       <button 
               id="clean-all"
               class="btn btn-danger"
