--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -31,14 +31,41 @@
             </button>
           </div>
         </form>
+      </div>   
+      
+
+
+<ul id="item-list" class="list-group pb-5">
+  <% items.map(function(item){%>
+    <li class="list-group-item list-group-item-info d-flex align-items-center justify-content-between">
+      <span class="item-text"><%=item.reja%></span>
+      <div>
+        <button 
+        data-id="<%=item._id%>" 
+        class="edit-me btn btn-secondary btn-sm mr-1"
+        >
+          Ozgartirish
+        </button>
+        <button 
+        data-id="<%=item._id%>" 
+        class="delete-me btn btn-danger btn-sm"
+        >
+        Ochirish
+      </button>
       </div>
+    </li>
+   <%}) %>
+
+  
+</ul>
 
 
-            <%=  items[0].reja %>
 
-          
 
-            
+
+
+
+       
       <button 
               id="clean-all"
               class="btn btn-danger"
